# docs/internal_swagger.json
@@ -471,6 +471,9 @@
                 "security": [
                     {
                         "UserAuth": []
+                    },
+                    {
+                        "UserAuth": []
                     }
                 ],
                 "description": "Распознает речь из аудиофайла и возвращает текст",
@@ -484,6 +487,15 @@
                     "Speech"
                 ],
                 "summary": "Распознавание речи",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Аудиофайл в формате MP3",
+                        "name": "audio",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Распознанный текст",
